# LearnOpenGL

./: CMakeLists.txt  README.md
.github/workflows/: cmake.yml
docs/: Doxyfile
include/: AssimpGLMHelpers.hpp  BufferType.hpp  BufferUsage.hpp  Camera.hpp  Cube.hpp  ElementBufferObject.hpp  GLFWType.hpp  ImguiContainer.hpp  Indices.hpp  LightSource.hpp  Logger.hpp  MathHelper.hpp  Mesh.hpp  Model.hpp  OpenGLType.hpp  Shader.hpp  ShaderProgram.hpp  ShaderType.hpp  SystemHelper.hpp  Texture.hpp  Texture2D.hpp  TextureEnums.hpp  Vertex.hpp  VertexArrayObject.hpp  VertexBufferLayout.hpp  VertexBufferObject.hpp  Vertices.hpp
lib/: CMakeLists.txt
lib/imgui/: CMakeLists.txt  version.txt
resources/: CMakeLists.txt
resources/models/: CMakeLists.txt
resources/models/SurvivalGuitarBackpack/: CMakeLists.txt  credit.txt
resources/models/SurvivalGuitarBackpack/textures/: CMakeLists.txt
resources/shaders/: CMakeLists.txt  container.frag  container.vert  lightsource.vert  shader.frag  shader.vert  shader2.frag
resources/textures/: CMakeLists.txt
src/: CMakeLists.txt  Camera.cpp  Cube.cpp  ElementBufferObject.cpp  ImguiContainer.cpp  Indices.cpp  LightSource.cpp  Logger.cpp  MathHelper.cpp  Shader.cpp  ShaderProgram.cpp  ShaderProgram.hpp  Texture.cpp  Texture2D.cpp  VertexArrayObject.cpp  VertexBufferLayout.cpp  VertexBufferObject.cpp  Vertices.cpp  main.cpp
src/Models/: CMakeLists.txt  Mesh.cpp  Model.cpp
